# MatCal

./: .gitignore  CMakeLists.txt  README.md
include/matcal/: matrix.h  matrix.hpp
src/: CMakeLists.txt  matrix.cpp  matrix.h  matrix.hpp
src/traits/: is_complex.hpp
test/: CMakeLists.txt  matrix_constructor_test.cpp  matrix_element_access_test.cpp  matrix_operator_test.cpp  matrix_test.cpp  test_utils.h  test_utils.hpp
